--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-This is ASCII-chan from Unit 3 of the Udacity course CS253,
-Web Application Engineering, written using Ruby, Haml, and Sinatra,
+Written using Ruby, Haml, and Sinatra,
 and deployed using Heroku. 
